syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;

option go_package = "github.com/DKhorkov/hmtm-sso/api/protobuf/sso;sso";


service AuthService {
  rpc Login(LoginIn) returns (LoginOut) {}
  rpc Logout(LogoutIn) returns (google.protobuf.Empty) {}
  rpc Register(RegisterIn) returns (RegisterOut) {}
  rpc RefreshTokens(RefreshTokensIn) returns (LoginOut) {}
  rpc VerifyEmail(VerifyEmailIn) returns (google.protobuf.Empty) {}
}

message RefreshTokensIn {
  string refreshToken = 1;
}

message LoginIn {
  string email = 1;
  string password = 2;
}

message LoginOut {
  string accessToken = 1;
  string refreshToken = 2;
}

message RegisterIn {
  string displayName = 1;
  string email = 2;
  string password = 3;
}

message RegisterOut {
  uint64 userID = 1;
}

message LogoutIn {
  string accessToken = 1;
}

message VerifyEmailIn {
  string verifyEmailToken = 1;
}
