syntax = "proto3";

import "google/protobuf/timestamp.proto";

package users;

option go_package = "github.com/DKhorkov/hmtm-sso/api/protobuf/sso;sso";


service UsersService {
  rpc GetUser(GetUserIn) returns (GetUserOut) {}
  rpc GetUsers(GetUsersIn) returns (GetUsersOut) {}
  rpc GetMe(GetMeIn) returns (GetUserOut) {}
}

message GetMeIn {
  string requestID = 1;
  string accessToken = 2;
}

message GetUserIn {
  string requestID = 1;
  uint64 ID = 2;
}

message GetUserOut {
  uint64 ID = 1;
  string email = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message GetUsersIn {
  string requestID = 1;
}

message GetUsersOut {
  repeated GetUserOut users = 1;
}

